iac-setup/k8s/collector/scala-stream-collector-dm.yaml
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "default"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "snowplow-collector-node-dm"
  namespace: "default"
  labels:
    app: "snowplow-collector-node-dm"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "snowplow-collector-node-dm"
  template:
    metadata:
      labels:
        app: "snowplow-collector-node-dm"
    spec:
      containers:
      - name: "scala-stream-collector-dm"
        image: "docker.io/snowplow/scala-stream-collector-pubsub:2.2.0"
        args: ["--config", "/snowplow/myconfig/config_dm.hocon"]
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          timeoutSeconds: 5
        volumeMounts:
        - name: collector-config-dm
          mountPath: /snowplow/myconfig
      volumes:
      - name: collector-config-dm
        configMap:
          name: collector-config-dm
