iac-setup/k8s/collector/collector-ingress-dm.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: collector-ingress-dm
  labels:
    app: snowplow-collector-node-dm
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-static-ip
    networking.gke.io/managed-certificates: my-cert
spec:
  backend:
    serviceName: collector-service
    servicePort: 80 # Matches with NodePort service
